Finished portfolio site rough draft for grid project

--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
     </main>
 
     <footer class="footEle">
+        <div class="footNote">
         <h1>Reach me through these Networks!</h1>
+        </div>
         <div class="socialCon">
-            <div class="sContain"></div>
-            <div class="sContain"></div>
-            <div class="sContain"></div>
-            <div class="sContain"></div>
-            <div class="sContain"></div>
+            <div class="sContain"><img src="/media/Social icons/104482_youtube_icon.png" class="imgS"></div>
+            <div class="sContain"><img src="./media/Social icons/git.png" class="imgS"></div>
+            <div class="sContain"><img src="./media/Social icons/linkd.png" class="imgS"></div>
+            <div class="sContain"><img src="./media/Social icons/4202050_whatsapp_chat_logo_social_social media_icon.png" class="imgS"></div>
+            
         </div>
     </footer>
     
